fixed overflow issue

--- a/yikyak/client/src/App.css
+++ b/yikyak/client/src/App.css
@@ -611,6 +611,7 @@ input.loginField, input.signUpField {
 
 .feedContent {
   width: 100%;
+  overflow: hidden;
 }
 
 .userYakarma {
